--- a/board_app/templates/board_app/components/rooms.html
+++ b/board_app/templates/board_app/components/rooms.html
@@ -17,7 +17,7 @@
     <div class="section">
 
         {# pagination #}
-        <div class="pt-6">
+        <!-- <div class="pt-6">
             {% if is_paginated %}
             <nav class="pagination is-centered" role="navigation" aria-label="pagination">
                 {% if page_obj.has_previous %}
@@ -48,5 +48,5 @@
                 {% endif %}
             </nav>
             {% endif %}
-        </div>
+        </div> -->
     </div>
