--- a/board_app/templates/board_app/index.html
+++ b/board_app/templates/board_app/index.html
@@ -3,7 +3,8 @@
 
 
 {% block content %}
-<main>
+<!-- <div class=""> -->
+<main class="main-container">
     <div class="mobile-searchbar">
         {% include 'board_app/components/searchbar.html' %}
     </div>
@@ -25,5 +26,9 @@
         {% include 'board_app/components/rooms.html' %}
     </div>
 </aside>
+<!-- </div> -->
+
+
+
 
 {% endblock content %}
