--- a/board_app/templates/board_app/add_comment.html
+++ b/board_app/templates/board_app/add_comment.html
@@ -4,12 +4,14 @@
 
 
 {% block content %}
-<section class="section">
-    <h2 class="subtitle is-2">Add a comment</h2>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class="button is-success mt-2">Post Comment</button>
-    </form>
-</section>
+<div class="crm columns">
+    <section class="section column is-8 is-offset-2">
+        <h2 class="subtitle is-2">Add a comment</h2>
+        <form action="" method="POST">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="button is-success mt-2">Post Comment</button>
+        </form>
+    </section>
+</div>
 {% endblock content %}
