--- a/board_app/templates/board_app/add_post.html
+++ b/board_app/templates/board_app/add_post.html
@@ -1,20 +1,21 @@
 {% extends 'board_app/base.html' %}
-{{ form.media }}
 {% block title %} - Post{% endblock %}
 
 
 {% block content %}
-<section class="section">
-    <h2 class="subtitle is-2">Create an Article</h2>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class="button is-success mt-2">Post your Article</button>
-    </form>
+<div class="crm columns">
+    <section class="section column is-8 is-offset-2">
+        <h2 class="subtitle is-2">Create an Article</h2>
+        <form action="" method="POST">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="button is-success mt-2">Post your Article</button>
+        </form>
 
-    <!-- <input name='basic' value='tag1, tag2 autofocus'> -->
+        <!-- <input name='basic' value='tag1, tag2 autofocus'> -->
 
-</section>
+    </section>
+</div>
 
 <script>
     // initialize Tagify
