--- a/board_app/templates/board_app/components/tag_cloud.html
+++ b/board_app/templates/board_app/components/tag_cloud.html
@@ -1,5 +1,5 @@
 <section class="section tag-cloud-section pb-0">
-    <h4 class="pb-4">Top 10 Tags</h4>
+    <h4 class="tags pb-4">Top 10 Tags</h4>
     {% for tag in tags %}
     <!-- {{ tag.name }} -->
     <div class="tag-container tags">
