--- a/board_app/templates/board_app/edit_post.html
+++ b/board_app/templates/board_app/edit_post.html
@@ -4,14 +4,17 @@
 
 
 {% block content %}
-<section class="section">
-    <h2 class="subtitle is-2">Edit Post</h2>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class="button is-success mt-2">Update your Article</button>
-    </form>
-</section>
+<div class="crm columns">
+    <section class="section column is-8 is-offset-2">
+        <h2 class="subtitle is-2">Edit Article</h2>
+        <form action="" method="POST">
+            {% csrf_token %}
+            {{ form.media }}
+            {{ form|crispy }}
+            <button type="submit" class="button is-success mt-2">Update your Article</button>
+        </form>
+    </section>
+</div>
 <script>
     // initialize Tagify
     var input = document.querySelector('[name=tags]'),
