--- a/board_app/templates/board_app/post_detail.html
+++ b/board_app/templates/board_app/post_detail.html
@@ -12,7 +12,7 @@
                 <h2 class="subtitle is-2">{{ post.title }}</h2>
             </div>
             <h4 class="subtitle is-4">{{ post.subtitle }}</h4>
-            <p>{{ post.content }}</p>
+            {{ post.content.html|safe }}
             {% if object.author == user %}
             <div class="post-edit-container pt-5 pb-2">
                 <a class="button is-small is-dark is-outlined mr-2" href="{% url 'edit_post' post.slug %}">Edit
@@ -21,7 +21,6 @@
                     post</a>
             </div>
             {% endif %}
-            <!-- <p> {{ post.content.html|safe }}</p> -->
             <div class="hr mt-5"></div>
             <div class="post-footer mt-2">
                 <p>[Author] {{ post.author }}</p>
