--- a/profile_app/templates/profile_app/edit_profile.html
+++ b/profile_app/templates/profile_app/edit_profile.html
@@ -5,26 +5,28 @@
 
 
 {% block content %}
-<section class="section">
-    <h2 class="subtitle is-2">Edit profile</h2>
+<div class="crm columns">
+    <section class="section column is-8 is-offset-2">
+        <h2 class="subtitle is-2">Edit profile</h2>
 
 
-    <div class="pb-6">
+        <div class="pb-6">
 
-        <figure class="image  is-128x128">
-            <img class="is-rounded" src="{{ user.profile.image.url }}" height="200" alt="">
-        </figure>
-    </div>
+            <figure class="image  is-128x128">
+                <img class="is-rounded" src="{{ user.profile.image.url }}" height="200" alt="">
+            </figure>
+        </div>
 
 
-    <form action="" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <fieldset class="form-group">
-            {{ user_form|crispy }}
-            {{ profile_form|crispy }}
-            <button type="submit" class="button is-success mt-2">Update</button>
-        </fieldset>
-    </form>
+        <form action="" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                {{ user_form|crispy }}
+                {{ profile_form|crispy }}
+                <button type="submit" class="button is-success mt-2">Update</button>
+            </fieldset>
+        </form>
 
-</section>
+    </section>
+</div>
 {% endblock content %}
