--- a/profile_app/templates/profile_app/profile_page.html
+++ b/profile_app/templates/profile_app/profile_page.html
@@ -1,82 +1,85 @@
 {% extends 'board_app/base.html' %}
 
 {% block content %}
-<section class="section is-narror">
-    <div class="has-text-centered has-text-left-tablet">
-        <h2 class="subtitle is-2 mb-6">My Profile</h2>
-    </div>
-
-    <div class="card mb-6">
-        <div class="card-content">
-            <div class="media">
-                <div class="media-center">
-                    <figure class="image container is-128x128 mr-5">
-                        <img class="is-rounded" src="{{ user.profile.image.url }}" height="200" alt="">
-                    </figure>
-                </div>
-                <div class="media-content">
-                    <p class="title is-4">{{ user }}</p>
-                    <!-- <span class="subtitle is-6">user id: {{ user.id }}</span> -->
-                    <p class="subtitle is-6"><a href="#">{{ user.email }}</a></p>
-                    <!-- <p>{{ posts.count }} posts | {{ comments.count }} comment</p> -->
-                    <p>{{ posts.count }} posts</p>
-                </div>
-            </div>
-
-            <div class="content">
-
-                <br>
-                {% if not user.profile.bio %}
-                <p class="is-5 mb-5 has-text-grey">User has no Bio</p>
-                {% else %}
-                <h6 class="is-5 mb-1">Bio:</h6>
-                <p>{{ user.profile.bio }}</p>
-                {% endif %}
-                <div class="">
-                    <!-- <p class="is-size-6 mb-0">Login last: <time>{{ user.last_login|date:'d-M-Y g:ia' }}</time></p> -->
-                    <p class="is-size-6">Date joined: <time>{{ user.date_joined|date:'d-M-Y g:ia' }}</time></p>
-                </div>
-            </div>
+<div class="crm columns">
+    <section class="section column is-10 is-offset-1">
+        <div class="has-text-centered has-text-left-tablet">
+            <h2 class="subtitle is-2 mb-6">My Profile</h2>
         </div>
-        <footer class="card-footer">
-            <!-- <a href="#" class="card-footer-item">Save</a>
+
+        <div class="card mb-6">
+            <div class="card-content">
+                <div class="media">
+                    <div class="media-center">
+                        <figure class="image container is-128x128 mr-5">
+                            <img class="is-rounded" src="{{ user.profile.image.url }}" height="200" alt="">
+                        </figure>
+                    </div>
+                    <div class="media-content">
+                        <p class="title is-4">{{ user }}</p>
+                        <!-- <span class="subtitle is-6">user id: {{ user.id }}</span> -->
+                        <p class="subtitle is-6"><a href="#">{{ user.email }}</a></p>
+                        <!-- <p>{{ posts.count }} posts | {{ comments.count }} comment</p> -->
+                        <p>{{ posts.count }} posts</p>
+                    </div>
+                </div>
+
+                <div class="content">
+
+                    <br>
+                    {% if not user.profile.bio %}
+                    <p class="is-5 mb-5 has-text-grey">User has no Bio</p>
+                    {% else %}
+                    <h6 class="is-5 mb-1">Bio:</h6>
+                    <p>{{ user.profile.bio }}</p>
+                    {% endif %}
+                    <div class="">
+                        <!-- <p class="is-size-6 mb-0">Login last: <time>{{ user.last_login|date:'d-M-Y g:ia' }}</time></p> -->
+                        <p class="is-size-6">Date joined: <time>{{ user.date_joined|date:'d-M-Y g:ia' }}</time></p>
+                    </div>
+                </div>
+            </div>
+            <footer class="card-footer">
+                <!-- <a href="#" class="card-footer-item">Save</a>
             <a href="#" class="card-footer-item">Edit</a> -->
-            <a class="card-footer-item" href="{% url 'edit_profile' %}">edit profile</a>
-        </footer>
-    </div>
+                <a class="card-footer-item" href="{% url 'edit_profile' %}">edit profile</a>
+            </footer>
+        </div>
 
-    <h3 class="subtitle is-3">Posts</h3>
-    {% for post in posts %}
-    <div class=" post-container post-container-index mb-6">
-        <a class="title-link" href="{{ post.get_absolute_url }}">
-            <h2 class="subtitle is-2 article-title-link">{{ post.title }}
-                <svg class="title-svg" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
-                    transform: ;msFilter:;">
-                    <path d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"></path>
-                </svg>
-            </h2>
-        </a>
-
-        <h4 class="subtitle">{{ post.subtitle }}</h4>
-        <p> {{ post.content.html|safe}}</p>
-        <div class="post-footer">
-            <p>[Author] {{ post.author }}</p>
-            <p>{{ post.date_posted|date:'d-M-Y g:ia' }}</p>
-            {% for tag in post.tags.all %}
-            <a class="has-text-weight-bold" href="{% url 'tag_post_page' tag.slug %}">
-                <p>#{{ tag.name }}</p>
+        <h3 class="subtitle is-3">Posts</h3>
+        {% for post in posts %}
+        <div class=" post-container post-container-index mb-6">
+            <a class="title-link" href="{{ post.get_absolute_url }}">
+                <h2 class="subtitle is-2 article-title-link">{{ post.title }}
+                    <svg class="title-svg" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
+                        transform: ;msFilter:;">
+                        <path d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z">
+                        </path>
+                    </svg>
+                </h2>
             </a>
-            {% endfor %}
-        </div>
-        <div class="">
-            {% if not post.comments.all %}
-            <p class="has-text-grey">No comments yet</p>
-            {% else %}
-            <p class="has-text-grey">{{ post.comments.count }} comment{{ post.comments.count|pluralize }}</p>
-            {% endif %}
-        </div>
-    </div>
-    {% endfor %}
 
-</section>
+            <h4 class="subtitle">{{ post.subtitle }}</h4>
+            <p> {{ post.content.html|safe}}</p>
+            <div class="post-footer">
+                <p>[Author] {{ post.author }}</p>
+                <p>{{ post.date_posted|date:'d-M-Y g:ia' }}</p>
+                {% for tag in post.tags.all %}
+                <a class="has-text-weight-bold" href="{% url 'tag_post_page' tag.slug %}">
+                    <p>#{{ tag.name }}</p>
+                </a>
+                {% endfor %}
+            </div>
+            <div class="">
+                {% if not post.comments.all %}
+                <p class="has-text-grey">No comments yet</p>
+                {% else %}
+                <p class="has-text-grey">{{ post.comments.count }} comment{{ post.comments.count|pluralize }}</p>
+                {% endif %}
+            </div>
+        </div>
+        {% endfor %}
+
+    </section>
+</div>
 {% endblock content %}
